--- a/src/jinja/sidebar.j2
+++ b/src/jinja/sidebar.j2
@@ -23,7 +23,11 @@
         </div>
         <div class="contact-info">
           <p class="contact-title">{{info.label}}</p>
-          <a href="#" class="contact-link">{{info.value}}</a>
+          {% if info.label == "Email" %}
+            <a href="mailto:{{info.value}}" class="contact-link">{{info.value}}</a>
+          {% else %}
+            <a href="#" class="contact-link">{{info.value}}</a>
+          {% endif %}
         </div>
       </li>
       {% endfor %}
