--- a/src/jinja/index.j2
+++ b/src/jinja/index.j2
@@ -25,6 +25,8 @@
       {% include 'resume.j2' %}
       <!-- PROJECTS -->
       {% include 'projects.j2' %}
+      <!-- PUBLICATIONS -->
+      {% include 'publications.j2' %}
       <!-- BLOG -->
       {% include 'blog.j2' %}
       <!-- CONTACT -->
