--- a/src/jinja/projects.j2
+++ b/src/jinja/projects.j2
@@ -8,7 +8,18 @@
       <li class="filter-item">
         <button class="active" data-filter-btn>All</button>
       </li>
-      {% set categories = projects.PROJECTS | map(attribute='category') | unique | list %}
+      {# Flatten all categories into a single list #}
+      {% set all_categories = [] %}
+      {% for project in projects.PROJECTS %}
+        {% if project.category is string %}
+          {% set _ = all_categories.append(project.category) %}
+        {% else %}
+          {% for cat in project.category %}
+            {% set _ = all_categories.append(cat) %}
+          {% endfor %}
+        {% endif %}
+      {% endfor %}
+      {% set categories = all_categories | unique | list %}
       {% for category in categories %}
       <li class="filter-item">
         <button data-filter-btn>{{category}}</button>
@@ -33,21 +44,22 @@
         {% endfor %}
       </ul>
     </div>
-    <ul class="project-list">
-      {% for item in projects.PROJECTS %}
-      <li class="project-item  active" data-filter-item data-category="{{item.category | lower}}">
-        <a href="{{item.url}}" target="_blank">
-          <figure class="project-img">
-            <div class="project-item-icon-box">
-              <ion-icon name="eye-outline"></ion-icon>
-            </div>
-            <img src="{{item.image}}" alt="{{item.title}}" loading="lazy">
-          </figure>
-          <h3 class="project-title">{{item.title}}</h3>
-          <p class="project-category">{{item.category}}</p>
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
+      <ul class="project-list">
+        {% for item in projects.PROJECTS %}
+          {% set categories_list = item.category if item.category is iterable and not item.category is string else [item.category] %}
+          <li class="project-item  active" data-filter-item data-category="{{ categories_list | join(' ') | lower }}">
+            <a href="{{item.url}}" target="_blank">
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+                <img src="{{item.image}}" alt="{{item.title}}" loading="lazy">
+              </figure>
+              <h3 class="project-title">{{item.title}}</h3>
+              <p class="project-category">{{ categories_list | join(', ') }}</p>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
   </section>
 </article>
