--- a/src/jinja/index.j2
+++ b/src/jinja/index.j2
@@ -26,7 +26,8 @@
       <!-- PROJECTS -->
       {% include 'projects.j2' %}
       <!-- PUBLICATIONS -->
-      {% include 'publications.j2' %}
+  {% include 'publications.j2' %}
+  {% include 'talks.j2' %}
       <!-- BLOG -->
       {% include 'blog.j2' %}
       <!-- CONTACT -->
