--- a/src/jinja/index.j2
+++ b/src/jinja/index.j2
@@ -4,7 +4,7 @@
   <!--- META --->
   {% include 'meta.j2' %}
   <!--- FAVICON -->
-  <link rel="shortcut icon" href="./src/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./src/images/logo.svg" type="image/x-icon">
   <!--- CSS --->
   <link rel="stylesheet" href="./src/css/style.css">
   <!--- GOOGLE FONT --->
