--- a/src/jinja/navbar.j2
+++ b/src/jinja/navbar.j2
@@ -4,8 +4,9 @@
     {% for item in navbar.NAVBAR %}
       <li class="navbar-item">
         {% if item.label == "CV" %}
-          <a class="navbar-link" href="config/assets/Nischal_Bhandari_CV.pdf" target="_blank" rel="noopener">{{ item.label }}</a>
-        {% else %}
+              {# Open the Resume page (which contains an inline preview) instead of opening the PDF in a new tab #}
+              <button class="navbar-link" data-nav-link data-page="resume">{{ item.label }}</button>
+            {% else %}
           <button class="navbar-link {% if loop.index0 == 0 %}active{% endif %}" data-nav-link data-page="{{ item.label | lower }}">{{ item.label }}</button>
         {% endif %}
       </li>
